Add sitemap to head

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -4,6 +4,7 @@
 
     <title>RustCON</title>
     <link rel="icon" href="/favicon.svg" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="theme-color" content="#3b82f6" />
     <meta
         name="description"
