Use Astro Image tag

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from "astro-icon";
+import Image from "astro/components/Image.astro";
 import Layout from "../layouts/Homepage.astro";
 ---
 
@@ -90,7 +91,7 @@ import Layout from "../layouts/Homepage.astro";
                             />
                         </a>
                         <a href="https://rusttools.xyz/">
-                            <img
+                            <Image
                                 src="/rusttools.png"
                                 alt="Rust Tools Logo"
                                 width="150"
