--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Main.astro";
         </div>
     </section>
     <section class="bg-zinc-950">
-        <div class="container mx-auto px-6 pt-12">
+        <div id="mobile" class="container mx-auto px-6 pt-12">
             <h1 class="text-3xl font-semibold text-white underline decoration-blue-500 lg:text-4xl">
                 Mobile
             </h1>
@@ -60,7 +60,7 @@ import Layout from "../layouts/Main.astro";
                 </div>
             </div>
         </div>
-        <div class="container mx-auto py-12 px-6">
+        <div id="desktop" class="container mx-auto py-12 px-6">
             <h1 class="text-3xl font-semibold text-white underline decoration-blue-500 lg:text-4xl">
                 Desktop <i>(Coming Soon)</i>
             </h1>
