--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,8 +7,11 @@ import { Icon } from "astro-icon";
         <div class="lg:flex lg:items-center lg:justify-between">
             <div class="flex items-center justify-between">
                 <div class="text-xl font-semibold text-gray-700">
-                    <a href="/" class="text-2xl font-bold text-white transition-colors duration-300 lg:text-3xl hover:text-gray-300">
-                        RustCON
+                    <a href="/" class="flex items-center">
+                        <img src="/logo.svg" alt="RustCON Logo" class="mr-3 h-8 w-8" />
+                        <span class="self-center whitespace-nowrap text-2xl font-semibold text-white">
+                            RustCON
+                        </span>
                     </a>
                 </div>
                 <div class="flex lg:hidden">
